docshell/test/browser/redirect_to_example.sjs
@@ -1,0 +1,4 @@
+function handleRequest(request, response) {
+  response.setStatusLine(request.httpVersion, 302, "Moved Permanently");
+  response.setHeader("Location", "http://example");
+}
